[gd_scene load_steps=2 format=3 uid="uid://bg8oekltlhet7"]

[ext_resource type="Script" path="res://addons/gameplay_recorder_interface/gri_interface.gd" id="1_1mj02"]

[node name="GriInterface" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mj02")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Categories" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(132, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Categories/VBoxContainer"]
layout_mode = 2
text = "Caterogry"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Categories/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Categories/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectStartingRecord" type="Button" parent="HBoxContainer/Categories/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Starting Record"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Records" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Records"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/Records/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 3

[node name="Info" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Info"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FileName" type="Label" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "File Name"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer"]
layout_mode = 2

[node name="Info" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Size" type="Label" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer/Info"]
layout_mode = 2
text = "Size"

[node name="Length" type="Label" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer/Info"]
layout_mode = 2
text = "Length"

[node name="Date" type="Label" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer/Info"]
layout_mode = 2
text = "Date"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer"]
layout_mode = 2

[node name="SetStartingRecord" type="Button" parent="HBoxContainer/VBoxContainer/Info/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Starting Record"

[connection signal="pressed" from="HBoxContainer/Categories/VBoxContainer/SelectStartingRecord" to="." method="_on_select_starting_record_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Info/VBoxContainer/VBoxContainer/SetStartingRecord" to="." method="_on_set_starting_record_pressed"]
